operator/pkg/model/ingestion/testdata/gateway/http_request_mirror_cross_namespace_no_grant/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: platform
  namespace: app-ns
spec:
  gatewayClassName: ""
  listeners:
  - name: http
    port: 80
    protocol: HTTP
status: {}
