operator/pkg/model/ingestion/testdata/gateway/http_request_mirror_cross_namespace_no_grant/input-httproute.yaml
- metadata:
    creationTimestamp: null
    name: http
    namespace: app-ns
  spec:
    parentRefs:
    - name: platform
    rules:
    - backendRefs:
      - name: main
        port: 8080
      filters:
      - requestMirror:
          backendRef:
            name: mirror
            namespace: mirror-ns
            port: 8081
        type: RequestMirror
  status:
    parents: null
