operator/pkg/model/ingestion/testdata/gateway/http_request_mirror_cross_namespace_no_grant/output-listeners.yaml
- hostname: "*"
  name: http
  port: 80
  protocol: HTTP
  routes:
  - backends:
    - name: main
      namespace: app-ns
      port:
        port: 8080
    path_match: {}
    timeout: {}
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: app-ns
    version: v1
